syntax = "proto3";

package clubMember;

// The request message containing the user's name.
message MClubMember {
  string id = 1;
  string first = 2;
  string last = 3;
  string email = 4;
  string password = 5;
  string cell = 6;
  int32 rating = 7;
  bool status = 8;
}

message MClubMemberEmpty {}

message MClubMembers {
  repeated MClubMember data = 1;
}

message MClubMemberId {
  string id = 1;
}

// The greeting service definition
service SClubMember {
  // creates a club member
  rpc CreateClubMember (MClubMember) returns (MClubMember);
  // reads a club member
  rpc ReadClubMember (MClubMemberId) returns (MClubMember);
  // reads all club members
  rpc ReadClubMembers (MClubMemberEmpty) returns (stream MClubMember);
  // Update all club member
  rpc UpdateClubMember (MClubMember) returns (MClubMember);
  // Delete s club member
  rpc DeleteClubMember (MClubMemberId) returns (MClubMember);
}
